force-app/main/default/objects/TrackIT__Inv_Location__c/TrackIT__Inv_Location__c.object-meta.xml
<CustomObject>
    <description>Object stores the locations of Inventory in Facility Manager</description>
    <label>Location Of Inventory</label>
    <nameField>
        <label>Inventory Location Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location Of Inventory</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>