force-app/main/default/objects/TrackIT__Inv_Location__c/fields/Max_Storage_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Max_Storage_Capacity__c</fullName>
    <label>Max Storage Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>