force-app/main/default/objects/TrackIT__Inv_Location__c/fields/Optimal_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Optimal_Quantity__c</fullName>
    <label>Optimal Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>