force-app/main/default/objects/TrackIT__Inv_Location__c/fields/Quantity_Needed__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Needed__c</fullName>
    <formula>IF(Restock_Point__c - TrackIT__Quantity__c &gt;= 0,  Optimal_Quantity__c -  TrackIT__Quantity__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Optimal Quantity - Actual Quantity</inlineHelpText>
    <label># Needed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>