force-app/main/default/objects/TrackIT__Inv_Location__c/fields/Restock_Point__c.field-meta.xml
<CustomField>
    <fullName>Restock_Point__c</fullName>
    <label>Restock Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>