force-app/main/default/objects/TrackIT__Inv_Location__c/fields/Store_Location__c.field-meta.xml
<CustomField>
    <fullName>Store_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Location</label>
    <type>Checkbox</type>
</CustomField>