force-app/main/default/objects/TrackIT__Inv_Location__c/fields/TrackIT__Inventory__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Inventory__c</fullName>
    <label>Inventory</label>
    <referenceTo>TrackIT__Inventory__c</referenceTo>
    <relationshipName>Inv_Locations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>