force-app/main/default/objects/TrackIT__Inv_Location__c/fields/TrackIT__Location_Name__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Location_Name__c</fullName>
    <defaultValue>&quot;Location Name&quot;</defaultValue>
    <description>Location name field used for displaying the location name instead of the record id in related objects</description>
    <label>Location Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>