force-app/main/default/objects/TrackIT__Inv_Location__c/fields/TrackIT__Target_Location_Desc__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Target_Location_Desc__c</fullName>
    <label>Location Desc</label>
    <type>TextArea</type>
</CustomField>