force-app/main/default/objects/TrackIT__Inv_Location__c/validationRules/QTY_cannot_be_less_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>QTY_cannot_be_less_than_zero</fullName>
    <active>false</active>
    <description>Quantity can be Zero or Greater</description>
    <errorConditionFormula>TrackIT__Quantity__c  &lt;= -0.0000001</errorConditionFormula>
    <errorDisplayField>TrackIT__Quantity__c</errorDisplayField>
    <errorMessage>Quantity at any location cannot be negative</errorMessage>
</ValidationRule>