force-app/main/default/objects/TrackIT__Inv_Location__c/validationRules/TrackIT__INV_LOC_ID_Change_After_Creation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>TrackIT__INV_LOC_ID_Change_After_Creation_Rule</fullName>
    <active>false</active>
    <description>Prevents users from changing Inventory Location ID after the Inventory Location is initially created.</description>
    <errorConditionFormula>IF(ISNULL( PRIORVALUE( Name )),FALSE,ISCHANGED( Name ) )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Inventory Location ID cannot be changed after initial creation.</errorMessage>
</ValidationRule>