force-app/main/default/objects/TrackIT__Inv_Location__c/validationRules/TrackIT__QTY_cannot_be_less_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>TrackIT__QTY_cannot_be_less_than_zero</fullName>
    <active>false</active>
    <errorConditionFormula>TrackIT__Quantity__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>TrackIT__Quantity__c</errorDisplayField>
    <errorMessage>Quantity at any location cannot be negative</errorMessage>
</ValidationRule>