force-app/main/default/objects/TrackIT__Inv_Location__c/listViews/TrackIT__All.listView-meta.xml
<ListView>
    <fullName>TrackIT__All</fullName>
    <columns>NAME</columns>
    <columns>TrackIT__Inventory__c</columns>
    <columns>TrackIT__Location__c</columns>
    <columns>TrackIT__Quantity__c</columns>
    <columns>Optimal_Quantity__c</columns>
    <columns>Max_Storage_Capacity__c</columns>
    <columns>Restock_Point__c</columns>
    <columns>Store_Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>